# pyft

./: Makefile  pyproject.toml
files/: 1MB  512B
src/pyft/: client.py  gui_client.py  server.py  user_db.py  utils.py
tests/: test_server.py
